src/objects/Territory_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Results</relationshipLabel>
        <relationshipName>Territory_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Owner__c</fullName>
        <formula>Territory_Rule__r.Assigned_Territory__r.Commercial_Territory_Owner__r.FirstName + &apos; &apos; +
Territory_Rule__r.Assigned_Territory__r.Commercial_Territory_Owner__r.LastName</formula>
        <label>Assigned Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territory Results</relationshipLabel>
        <relationshipName>Territory_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName + &apos; &apos; + Account__r.Owner.LastName</formula>
        <label>Current Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excl_on_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates that the Account has the “Exclude from Territory Assignment” flag set to true when the process ran</description>
        <label>Excl. on Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether the record will change territory\owner</description>
        <label>No Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Model</label>
        <referenceTo>Territory_Model__c</referenceTo>
        <relationshipLabel>Territory Results</relationshipLabel>
        <relationshipName>Territory_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Rule</label>
        <referenceTo>Territory_Rule__c</referenceTo>
        <relationshipLabel>Territory Results</relationshipLabel>
        <relationshipName>Territory_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Territory_Model__c</columns>
        <columns>Account__c</columns>
        <columns>Current_Account_Owner__c</columns>
        <columns>Assigned_Owner__c</columns>
        <columns>Territory_Rule__c</columns>
        <columns>Excl_on_Account__c</columns>
        <columns>No_Change__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Territory Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>